--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,8 @@
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.css",
-              "node_modules/font-awesome/css/font-awesome.css"
-            ],
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/sweetalert2/src/sweetalert2.scss"            ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
               "node_modules/popper.js/dist/umd/popper.js",
